--- a/Project/hlavni/style.css
+++ b/Project/hlavni/style.css
@@ -1,5 +1,14 @@
+html {
+	width: -webkit-fill-available;
+	height: -webkit-fill-available;
+}
+body {
+	width: 100%;
+	height: 100%;
+	margin:0;
+}
 #header{
-	width: 1000px;
+	width: 100%;
 	height: 50px;
 }
 .jednotlivy_uzivatele{
@@ -13,8 +22,9 @@
 	width: 200px;
 }
 #chat{
-	height: 500px;
-	width: 1000px;
+	height: min-content;
+	width: 100%;
+	text-align: -webkit-center;
 }
 #zpravy{
 	width: 800px;
@@ -22,4 +32,26 @@
 }
 #uzivatele{
 	width: 200px;
+}
+#uzivatel_prihlasen{
+
+}
+#odhlaseni{
+	float: right;
+	font-size: 20px;
+	text-decoration: none;
+	color: black;
+}
+#desifrace{
+	height: 100%;
+	width: 100%;
+	text-align: -webkit-center;
+}
+#desifrace_form{
+	position: relative;
+	top: 50%;
+}
+#desifrace_text{
+	position: relative;
+	top: 50%;
 }
