--- a/Project/hlavni/style.css
+++ b/Project/hlavni/style.css
@@ -1,6 +1,7 @@
 html {
 	width: -webkit-fill-available;
 	height: -webkit-fill-available;
+	font-family: sans-serif;
 }
 body {
 	width: 100%;
@@ -34,13 +35,19 @@ body {
 	width: 200px;
 }
 #uzivatel_prihlasen{
-
+	position: relative;
+	top: 10px;
+	left: 10px;
+	font-weight: bold;
 }
 #odhlaseni{
 	float: right;
 	font-size: 20px;
 	text-decoration: none;
 	color: black;
+	position: relative;
+	top: 10px;
+	right: 10px;
 }
 #desifrace{
 	height: 100%;
@@ -54,4 +61,40 @@ body {
 #desifrace_text{
 	position: relative;
 	top: 50%;
+}
+#zadost_form {
+	position: relative;
+    top: 51%;
+}
+#seznam{
+	display: -webkit-box;
+	width: 1000px;
+	min-height: 100px;
+	margin-top: 20px;
+}
+.uzivatele_seznam{
+	width: 150px;
+	height: 150px;
+	margin-right: 10px;
+	position: relative;
+	border: black 1px solid;
+}
+.desifrovani_form {
+	background: none;
+	position: absolute;
+	bottom: 3px;
+	width: 150px;
+}
+.desifrovani_form input {
+	background-color: #f8f4f4;
+    border-width: thin;
+    border-color: #8c8c8c7a;
+}
+.uzivatele_seznam span {
+	position: relative;
+	top: 3px;
+}
+.form_zadost {
+	position: relative;
+	bottom: 10px;
 }
