--- a/Project/style_prihlaseni.css
+++ b/Project/style_prihlaseni.css
@@ -1,6 +1,7 @@
 html{
 	width: -webkit-fill-available;
 	height: -webkit-fill-available;
+	font-family: sans-serif;
 }
 body {
 	margin: 0px;
@@ -8,6 +9,12 @@ body {
 }
 form{
 	width: min-content;
+}
+form input {
+	background-color: #f8f4f4;
+	border-radius: 7px;
+	border-width: thin;
+	border-color: #8c8c8c7a;
 }
 #submit{
 	position: relative;
